--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #e9e9e9;
+    background-color: var(--color-primary);
     margin: 0 auto;
 }
 
 .bar {
     margin-top: 100px;
-    background-color: #e9e9e9;
+    background-color: var(--color-primary);
     width: 100%;
     height: 500px;
 
@@ -14,26 +14,27 @@ body {
 .calc-background {
     margin: auto;
     height:100%;
-    background-color: #b8b5b5;
+    background-color: var(--color-primary);
     width: 400px;
     border: 1px solid black;
     border-radius: 15px;
-    box-shadow: 5px 5px 4px  rgb(109, 107, 107);
+    box-shadow: 5px 5px 4px  var(--shadow-color);
 
 }
 
 .calc-topbar {
     position: relative;
-    background-color: black;
+    background-color: var(--color-secondary);
     height: 120px;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    border: 1px solid black;
 
 }
 
 #result {
     position: absolute;
-    color: white;
+    color: var(--font-color);
     bottom: 10px;;
     right: 10px;
     font-family: Arial;
@@ -103,12 +104,14 @@ button:focus {
     display: block;
     margin-top: 40px;
     text-align: center;
+    background-color: var(--color-primary);
 }
 
 .toggle-text {
     font-family: arial;
     font-weight: bold;
     margin-bottom: 10px;
+    color: var(--color-accent);
 }
 
 
@@ -180,5 +183,18 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 
+.theme-light {
+    --color-primary: #e9e9e9;
+    --color-secondary: #ffffff;
+    --color-accent: #000000;
+    --font-color: #000000;
+    --shadow-color: grey;
+ }
 
-
+ .theme-dark {
+    --color-primary: #3d3d3d;
+    --color-secondary: #000000;
+    --color-accent: #ffffff;
+    --font-color: #ffffff;
+    --shadow-color: black;
+ }
