--- a/styles.css
+++ b/styles.css
@@ -192,9 +192,9 @@ input:checked + .slider:before {
  }
 
  .theme-dark {
-    --color-primary: #3d3d3d;
+    --color-primary: #4e4e4e;
     --color-secondary: #000000;
     --color-accent: #ffffff;
     --font-color: #ffffff;
-    --shadow-color: black;
+    --shadow-color: #000000;
  }
